[package]
authors = ["Vitaly Domnikov <dotcypress@gmail.com>"]
description = "Genesis"
documentation = "https://github.com/dotcypress/genesis"
homepage = "https://github.com/dotcypress/genesis"
license = "MIT/Apache-2.0"
name = "genesis"
readme = "README.md"
repository = "https://github.com/dotcypress/genesis"
version = "0.0.0"

[badges.appveyor]
branch = "master"
repository = "dotcypress/genesis"
service = "github"

[badges.travis-ci]
branch = "master"
repository = "dotcypress/genesis"

[dependencies]
clap = "2.31.2"
env_logger = "0.5.9"
log = "0.4.1"
